tests/error/result_errors/state_result_non_qubit_array.err
Error: Expected an array of qubits (at $FILE:13:23)
   | 
11 | @no_type_check
12 | def main(xs: array[int, 3]) -> None:
13 |    state_result("foo", xs)
   |                        ^^ Expected an array of qubits

Guppy compilation failed due to 1 previous error
